# 7thang11

./: .gitignore  CMakeLists.txt  README.md  build_m8.sh  config.conf  miner_m8.sh  minxunium.py  requirements.txt  run2gpus.py
hungtien/src/argon2-gpu-bench/: main.cpp
